// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveQueryModeButton matches snapshot auto 1`] = `
<Blueprint4.Popover2
  boundary="clippingParents"
  captureDismiss={false}
  content={
    <Blueprint4.Menu>
      <Blueprint4.MenuItem
        active={false}
        className="auto auto-on"
        disabled={false}
        icon="tick"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        selected={false}
        shouldDismissPopover={true}
        text="Auto"
      />
      <Blueprint4.MenuItem
        active={false}
        className="on"
        disabled={false}
        icon="blank"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        selected={false}
        shouldDismissPopover={true}
        text="On"
      />
      <Blueprint4.MenuItem
        active={false}
        className="off"
        disabled={false}
        icon="blank"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        selected={false}
        shouldDismissPopover={true}
        text="Off"
      />
    </Blueprint4.Menu>
  }
  defaultIsOpen={false}
  disabled={false}
  fill={false}
  hasBackdrop={false}
  hoverCloseDelay={300}
  hoverOpenDelay={150}
  inheritDarkTheme={true}
  interactionKind="click"
  minimal={false}
  openOnTargetFocus={true}
  portalClassName="live-query-mode-button-portal"
  position="bottom-left"
  positioningStrategy="absolute"
  shouldReturnFocusOnClose={false}
  targetTagName="span"
  transitionDuration={300}
  usePortal={true}
>
  <Blueprint4.Button
    className="live-query-mode-button"
  >
    Live query:
     
    <span
      className="auto auto-on"
    >
      Auto
    </span>
  </Blueprint4.Button>
</Blueprint4.Popover2>
`;

exports[`LiveQueryModeButton matches snapshot on 1`] = `
<Blueprint4.Popover2
  boundary="clippingParents"
  captureDismiss={false}
  content={
    <Blueprint4.Menu>
      <Blueprint4.MenuItem
        active={false}
        className="auto auto-on"
        disabled={false}
        icon="blank"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        selected={false}
        shouldDismissPopover={true}
        text="Auto"
      />
      <Blueprint4.MenuItem
        active={false}
        className="on"
        disabled={false}
        icon="tick"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        selected={false}
        shouldDismissPopover={true}
        text="On"
      />
      <Blueprint4.MenuItem
        active={false}
        className="off"
        disabled={false}
        icon="blank"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        selected={false}
        shouldDismissPopover={true}
        text="Off"
      />
    </Blueprint4.Menu>
  }
  defaultIsOpen={false}
  disabled={false}
  fill={false}
  hasBackdrop={false}
  hoverCloseDelay={300}
  hoverOpenDelay={150}
  inheritDarkTheme={true}
  interactionKind="click"
  minimal={false}
  openOnTargetFocus={true}
  portalClassName="live-query-mode-button-portal"
  position="bottom-left"
  positioningStrategy="absolute"
  shouldReturnFocusOnClose={false}
  targetTagName="span"
  transitionDuration={300}
  usePortal={true}
>
  <Blueprint4.Button
    className="live-query-mode-button"
  >
    Live query:
     
    <span
      className="on auto-on"
    >
      On
    </span>
  </Blueprint4.Button>
</Blueprint4.Popover2>
`;
